--- a/operational.tex
+++ b/operational.tex
@@ -112,7 +112,7 @@ several ways, we consider that each derivation generates a
 different instance. In particular, we will later consider multisets of computations as well.
 %
 We will use the delimiters~$\lbag$ and~$\rbag$ to denote
-multisets.
+multisets and $\uplus$ to denote the union of multisets.
 
 The following result, the proof is immediate, shows that successful termination leads to $\nil$.
 
