--- a/denotational.tex
+++ b/denotational.tex
@@ -1,29 +1,20 @@
 \subsection{Denotational Semantics}
 \label{sec:stat:den}
-\mncomment{Comprobad que he interpretado bien lo que ponia en los itemizes originales}
 
 Next we define a denotational semantics for the terms of our language. The main features of the semantic domain are that we consider products (set of features) with probability,
 each product appears one and the sum of all the probabilities
 associated with products belongs to the interval $(0,1]$. First, we
-precisely define the members of the semantic domain. 
+precisely define the members of the semantic domain.
 
 %\todo{Explicar el modelo con más detalle,  y el motivo por el que se necesitan multiconjnutos}
 
-\mncomment{Me he bloqueado. Se quiere definir primero el dominio
-  semantico, supongo. Asi que habria que definir $\calM$, creo. Luego,
-  durante el resto de la seccion, en lugar de decir $M \subseteq
-  \calP(\calF)\times [0,1]$ habria que decir $M\in \calM$, no? Supongo
-  esto y continuo. Si he supuesto algo mal, corregidlo,
-  please.}\lcomen{Ha veces que lo que hay son elementos 
-$MM \subseteq \calP(\calF)\times [0,1]$ que no cumplen la condición de \calM.}
-
 \bdfn\label{def:den:pr}
 We define the semantic domain $\calM$ as the largest set $\calM\subseteq\calP(\calP(\calF)\times
-  (0,1]))$ such that if $M\in\calM$ then the following
+  (0,1]))$ such that if $A\in\calM$ then the following
   conditions hold:
   \begin{itemize}
-  \item If $(P,q)\in M$ and $(P,r)\in M$ then $q=r$.
-  \item $0\leq \sum \lbag q \ | \ \exists P: (P,q)\in M\rbag \leq 1$.
+  \item If $(P,q)\in A$ and $(P,r)\in M$ then $q=r$.
+  \item $0\leq \sum \lbag q \ | \ \exists P: (P,q)\in A\rbag \leq 1$.
   \end{itemize}
 %\edfn
 
@@ -34,39 +25,33 @@ We define the semantic domain $\calM$ as the largest set $\calM\subseteq\calP(\c
 %\end{itemize}
 
 %\bdfn
-Let $M$ a multiset  with elements in the set $\calP(\calF)\times [0,1]$.
+Let $M$ be a multiset  with elements in the set $\calP(\calF)\times [0,1]$.
 We define the operator $\accum$ as follows:
   $$\accum(M) = \left\{(P,p)\ \left| \ p=\sum_{(P,q)\in M}q \wedge p>0\right. \right\}$$
 \edfn
 
+Even though the elements of the semantic domain are sets of pairs (product, probability), with at most one occurrence of a given product, we will use multisets as auxiliary elements in our semantic functions. Then, the function $\accum(M)$ will \emph{flatten} them to become sets.
 The following result is immediate.
+
 \bprop\label{prop:pr:accum}
  Let $M$ be a multiset with elements in the set $\calP(\calF)\times
- [0,1]$
- \mncomment{otra vez lo de multiset. Puede que yo no haya entendido
-   algo? Pero vamos, si es un multiset, no tiene sentido que ponga
-   $M\subseteq \calP(\calF) \times [0,1]$.}\lcomen{En la mayoría de
-   los operadores semántics salen multiconjuntos. Por eso $M$ debe ser
- un multiconjunto.}
- %be a multiset, 
- If $1\geq\sum\lbag q\ |\ (P,q)\in M\rbag$
+ [0,1]$. If $1\geq\sum\lbag q\ |\ (P,q)\in M\rbag$
  then $\accum(M)\in\calM$.
 \eprop
 
 
-Next we define the operators of the denotational semantics. Multisets
-meeting the conditions of the previous Proposition appear when
+Next we define the operators of the denotational semantics. As we have said before, multisets
+meeting the conditions of the previous result appear when
 defining these operators. For instance, the prefix operator
-$\semden{\fA;}(M)$ should add feature $\fA$ to any product in $M$. Let
-suppose that 
+$\semden{\fA;}(M)$ should add feature $\fA$ to any product in $M$. Let us
+suppose that
 $M=\{
-   (\{\fB,\fA\},\frac{1}{2}), 
-   (\{\fB\},\frac{1}{2})\}$. 
-If we add $\fA$ to the products of $M$, we obtain the product
-$\{\fA,\fB\}$ repeated twice with probability $\frac{1}{2}$. So we
+   (\{\fB,\fA\},\frac{1}{2}),
+   (\{\fB\},\frac{1}{2})\}$.
+If we add $\fA$ to the products of $M$ then we obtain the product
+$\{\fA,\fB\}$ twice, with probability $\frac{1}{2}$ associated with each occurrence. So we
 need to apply the function $\accum$ to accumulate both probabilities
-and obtain a single product with probability $1$. Also in this
-definition we use the multiset union denoted by $\uplus$.
+and obtain a single product with probability $1$. 
 
 
 \bdfn\label{def:semantic:operators}
@@ -123,23 +108,33 @@ definition we use the multiset union denoted by $\uplus$.
 
 
 It is easy to check that all multisets appearing in the previous
-definition meet the conditions of Proposition~\ref{prop:pr:accum}. So
+definition meet the conditions of Proposition~\ref{prop:pr:accum}. So,
 the operators are actually well defined. This is formalized in the
-following Proposition.
+following result.
 \bprop\label{prp:domain:prob}
   Let  $M,M_{1}, M_{2}\in\calM$,
-  $p\in(0,1]$ a probability, and 
-  $\feature{A},\feature{B}\in\calF$, then:
-  \begin{itemize}
-  \item $\semdenp{\feature{A};\cdot}(M)\in\calM$
-  \item $\semdenp{\ofeature{A};_{r}\cdot}(M)\in\calM$
-  \item $\semdenp{\cdot\choice_{r}\cdot}(M_{1},M_{2})\in\calM$
-  \item $\semdenp{\cdot\paral\cdot}(M_{1},M_{2})\in\calM$
-  \item $\semdenp{\require{A}{B}{\cdot}}(M)\in\calM$
-  \item $\semdenp{\exclude{A}{B}{\cdot}}(M)\in\calM$
-  \item $\semdenp{\mandatory{A}{\cdot}}(M)\in\calM$
-  \item $\semdenp{\forbid{A}{\cdot}}(M)\in\calM$
-  \end{itemize}
+  $p\in(0,1]$ be a probability, and
+  $\feature{A},\feature{B}\in\calF$ be features. We have:
+%  \begin{itemize}
+%  \item $\semdenp{\feature{A};\cdot}(M)\in\calM$
+%  \item $\semdenp{\ofeature{A};_{r}\cdot}(M)\in\calM$
+%  \item $\semdenp{\cdot\choice_{r}\cdot}(M_{1},M_{2})\in\calM$
+%  \item $\semdenp{\cdot\paral\cdot}(M_{1},M_{2})\in\calM$
+%  \item $\semdenp{\require{A}{B}{\cdot}}(M)\in\calM$
+%  \item $\semdenp{\exclude{A}{B}{\cdot}}(M)\in\calM$
+%  \item $\semdenp{\mandatory{A}{\cdot}}(M)\in\calM$
+%  \item $\semdenp{\forbid{A}{\cdot}}(M)\in\calM$
+%  \end{itemize}
+$$ \begin{array}{lll}
+\bullet\ \semdenp{\feature{A};\cdot}(M)\in\calM &
+\bullet\ \semdenp{\ofeature{A};_{r}\cdot}(M)\in\calM&
+\bullet\ \semdenp{\cdot\choice_{r}\cdot}(M_{1},M_{2})\in\calM\\
+\bullet\ \semdenp{\cdot\paral\cdot}(M_{1},M_{2})\in\calM$&
+\bullet\ \semdenp{\require{A}{B}{\cdot}}(M)\in\calM$&
+\bullet\ \semdenp{\exclude{A}{B}{\cdot}}(M)\in\calM$\\
+\bullet\ \semdenp{\mandatory{A}{\cdot}}(M)\in\calM$&
+\bullet\ \semdenp{\forbid{A}{\cdot}}(M)\in\calM$
+  \end{array}$$
 \eprop
 
 
