--- a/denotational.tex
+++ b/denotational.tex
@@ -125,14 +125,14 @@ following result.
 %  \item $\semdenp{\mandatory{A}{\cdot}}(M)\in\calM$
 %  \item $\semdenp{\forbid{A}{\cdot}}(M)\in\calM$
 %  \end{itemize}
-$$ \begin{array}{lll}
-\bullet\ \semdenp{\feature{A};\cdot}(M)\in\calM &
-\bullet\ \semdenp{\cdot\paral\cdot}(M_{1},M_{2})\in\calM&
+$$ \begin{array}{lllll}
+\bullet\ \semdenp{\feature{A};\cdot}(M)\in\calM & &
+\bullet\ \semdenp{\cdot\paral\cdot}(M_{1},M_{2})\in\calM& &
 \bullet\ \semdenp{\mandatory{A}{\cdot}}(M)\in\calM\\
-\bullet\ \semdenp{\ofeature{A};_{r}\cdot}(M)\in\calM&
-\bullet\ \semdenp{\require{A}{B}{\cdot}}(M)\in\calM&
+\bullet\ \semdenp{\ofeature{A};_{r}\cdot}(M)\in\calM& &
+\bullet\ \semdenp{\require{A}{B}{\cdot}}(M)\in\calM& &
 \bullet\ \semdenp{\forbid{A}{\cdot}}(M)\in\calM\\
-\bullet\ \semdenp{\cdot\choice_{r}\cdot}(M_{1},M_{2})\in\calM&
+\bullet\ \semdenp{\cdot\choice_{r}\cdot}(M_{1},M_{2})\in\calM& &
 \bullet\ \semdenp{\exclude{A}{B}{\cdot}}(M)\in\calM
   \end{array}$$
 
