--- a/equivalence.tex
+++ b/equivalence.tex
@@ -88,7 +88,7 @@ $$    \prodp(\exclude{A}{B}{P})=\semdenp{\exclude{A}{B}{\cdot}}(\prodp(P))$$
 %  This proposition is an inmmediate consequence of
 %  Lemma~\ref{lem:excl} in the Appendix~\ref{app:proofs}
 %\end{proof}
-%\eprop
+\eprop
 
 The proof of the following result is an immediate consequence, by structural induction on $P$, of
 Proposition~\ref{prop:DenoOpe}.
